# historic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  log.txt  protocol.txt  rd.cap  readme.txt  testtxt  world.txt  world_example.toml
client/: CMakeLists.txt  atlas.cpp  atlas.hpp  chunks.cpp  chunks.hpp  client_app.cpp  client_app.hpp  config.cpp  config.hpp  console.cpp  console.hpp  debug_overlay.cpp  debug_overlay.hpp  deferred_pass.cpp  deferred_pass.hpp  fontlib.cpp  fontlib.hpp  game.cpp  game.hpp  gamedata.cpp  gbuffer.cpp  gbuffer.hpp  globals.cpp  globals.hpp  image.cpp  image.hpp  input.cpp  input.hpp  mesh.hpp  mesh_builder.hpp  net_ecs.cpp  net_ecs.hpp  net_entities.cpp  net_entities.hpp  net_gamedata.cpp  net_gamedata.hpp  network.cpp  network.hpp  network_entities.cpp  player_look.cpp  (+23 more)
client/api/: CMakeLists.txt  api.cpp  api.hpp  console.cpp  console.hpp
client/comp/: chunk_mesh_component.hpp  local_player.hpp  static_chunk_mesh_component.hpp  static_chunk_mesh_needs_update_component.hpp
client/components/: camera.hpp  chunk_mesh.hpp  local_player.hpp
client/gl/: buffer.hpp  context.cpp  context.hpp  drawcmd.hpp  framebuffer.hpp  fwd.hpp  object.hpp  pipeline.hpp  pixel_format.hpp  pixelformat.hpp  renderbuffer.hpp  sampler.hpp  shader.hpp  texture.hpp  vertex_array.hpp
client/render/: CMakeLists.txt  atlas.cpp  atlas.hpp  gbuffer.cpp  gbuffer.hpp  shadowmap.cpp  shadowmap.hpp
client/render/gl/: buffer.hpp  context.cpp  context.hpp  drawcmd.hpp  framebuffer.hpp  object.hpp  pipeline.hpp  pixelformat.hpp  renderbuffer.hpp  sampler.hpp  shader.hpp  texture.hpp  vertexarray.hpp
client/render/imgui_ext/: window.hpp
client/sys/: chunk_mesher.cpp  chunk_mesher.hpp  chunk_renderer.cpp  player_look.cpp  player_move.cpp  proj_view.cpp  proj_view.hpp
client/systems/: CMakeLists.txt  chunk_mesher.cpp  chunk_mesher.hpp  chunk_renderer.cpp  chunk_renderer.hpp  player_look.cpp  player_look.hpp  player_move.cpp  player_move.hpp  player_renderer.cpp  player_renderer.hpp  proj_view.cpp  proj_view.hpp  username_renderer.cpp  username_renderer.hpp
client/util/: CMakeLists.txt  image.cpp  image.hpp  include.cpp  include.hpp  mesh_builder.hpp  screenshots.cpp  screenshots.hpp
common/: CMakeLists.txt  chunks.hpp  cmdline.cpp  cmdline.hpp  config.hpp  filesystem.cpp  filesystem.hpp  fs.cpp  fs.hpp  mixin.hpp  traits.hpp  types.hpp  voxels.cpp  voxels.hpp  world.hpp
common/comp/: chunk_component.hpp  creature_component.hpp  player_component.hpp
common/math/: CMakeLists.txt  angle_wrap.hpp  const.hpp  constexpr.hpp  crc64.cpp  crc64.hpp  frustum.cpp  frustum.hpp  math.hpp  random.hpp  transform.hpp  types.hpp
common/protocol/: const.hpp  enet.hpp  packet.hpp  serialization.hpp  session.hpp
common/util/: CMakeLists.txt  clock.hpp  format.hpp  include.cpp  include.hpp  randstr.hpp  spdlog.hpp
core/: CMakeLists.txt  cmdline.cpp  config.hpp  fs.cpp  types.hpp
core/math/: CMakeLists.txt  angle_wrap.hpp  constexpr.hpp  crc64.cpp  crc64.hpp  frustum.cpp  frustum.hpp
core/util/: clock.hpp  randstr.hpp  spdlog_sinks.hpp
game/: config.toml  server.toml
game/server/: CMakeLists.txt  chunks.cpp  chunks.hpp  game.cpp  game.hpp  globals.cpp  globals.hpp  network.cpp  network.hpp  server_app.cpp  server_app.hpp  session_info.hpp  session_manager.cpp
launch/: CMakeLists.txt  main.cpp
shared/: CMakeLists.txt  chunks.hpp  config.hpp  cvar.cpp  cvar.hpp  entity_types.hpp  script_engine.cpp  script_engine.hpp  session.hpp  voxels.cpp  voxels.hpp  world.hpp
shared/comp/: head.hpp  network.hpp
shared/components/: chunk.hpp  creature.hpp  head.hpp  player.hpp
shared/protocol/: protocol.hpp
shared/protocol/packets/client/: handshake.hpp  login_start.hpp  request_gamedata.hpp  request_respawn.hpp
shared/protocol/packets/server/: attach_creature.hpp  attach_head.hpp  attach_player.hpp  chunk_voxels.hpp  create_entity.hpp  gamedata_chunk_voxels.hpp  gamedata_end_request.hpp  gamedata_voxel_entry.hpp  gamedata_voxel_face.hpp  login_success.hpp  player_info_entry.hpp  player_info_username.hpp  remove_entity.hpp  spawn_entity.hpp  spawn_player.hpp  unload_chunk.hpp  voxel_def_checksum.hpp  voxel_def_entry.hpp  voxel_def_face.hpp
shared/protocol/packets/shared/: chat_message.hpp  creature_position.hpp  creature_rotation.hpp  disconnect.hpp  head_angles.hpp  update_creature.hpp  update_head.hpp
shared/script/: CMakeLists.txt  cvar_base.cpp  cvar_base.hpp  cvar_numeric.hpp  cvars.cpp  cvars.hpp  fcvar.hpp  script_engine.cpp  script_engine.hpp
shared/util/: clock.hpp  enet.hpp
src/client/: CMakeLists.txt  atlas.cpp  atlas.hpp  camera.hpp  camera_controller.cpp  camera_controller.hpp  chunks.cpp  chunks.hpp  client_app.cpp  client_app.hpp  client_chunks.cpp  client_globals.cpp  client_globals.hpp  client_world.cpp  clock.cpp  clock.hpp  composite.cpp  debug_overlay.cpp  debug_overlay.hpp  gbuffer.cpp  gbuffer.hpp  generic_mesh.hpp  generic_renderer.cpp  generic_renderer.hpp  globals.cpp  globals.hpp  input.cpp  input.hpp  mesh_builder.hpp  move_controller.cpp  move_controller.hpp  movetype.hpp  packed_vertex.hpp  res_texture.cpp  screen.cpp  screen.hpp  shaderlib.cpp  shadow_manager.cpp  shadow_manager.hpp  shadowmap.hpp  (+7 more)
src/client/comp/: camera.hpp  chunk_mesh.hpp  generic_mesh.hpp  voxel_mesh.hpp
src/client/gl/: CMakeLists.txt  buffer.hpp  context.cpp  drawcmd.hpp  framebuffer.hpp  object.hpp  pipeline.hpp  renderbuffer.hpp  shader.hpp  texture.hpp  vertexarray.hpp
src/client/res/: CMakeLists.txt  texture.cpp
src/client/sys/: CMakeLists.txt  chunk_mesher.cpp  chunk_mesher.hpp  chunk_renderer.cpp  chunk_renderer.hpp  generic_renderer.cpp  generic_renderer.hpp  player_look.cpp  player_look.hpp  player_move.cpp  player_move.hpp  proj_view.cpp  proj_view.hpp  voxel_mesher.cpp  voxel_mesher.hpp  voxel_renderer.cpp  voxel_renderer.hpp
src/client/util/: CMakeLists.txt  chunks.cpp  chunks.hpp  clock.cpp  image.cpp  image.hpp  mesh_builder.hpp  screenshots.cpp  shaderlib.cpp  shaderlib.hpp  shaders.cpp  shaders.hpp  voxutils.cpp  voxutils.hpp
(+224 files in other folders)
